<resources>
    <string name="app_name">ProyectoFinalGym</string>
    //Register
    <string name="username">Nombre</string>
    <string name="age">Edad</string>
    <string name="dni">Dni</string>
    <string name="telefono">Telefono</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="politicaPriv">Acepto la politica de privacidad</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="botonRegistro">REGISTRARSE</string>

    //Inicio
    <string name="empecemos">EMPECEMOS</string>
    
    //Login
    <string name="entrar">INICIAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>